hphp/hack/test/typecheck/runtime_generic_bad.php.exp
File "runtime_generic_bad.php", line 4, characters 10-10:
Generics are not allowed in this position. (Typing[4306])
